# ethereumapis

./: .bazelrc  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  buf.gen.yaml  buf.yaml  deps.bzl  go.mod  go.sum  package.json  tsconfig.json
.github/: CODEOWNERS
eth/ext/: BUILD.bazel  options.pb.go  options.swagger.json
eth/service/: beacon_chain_service.pb.go  beacon_chain_service.pb.gw.go  beacon_chain_service.proto  beacon_debug_service.pb.go  beacon_debug_service.pb.gw.go  beacon_debug_service.proto  events_service.pb.go  events_service.pb.gw.go  events_service.proto  key_management.pb.go  key_management.pb.gw.go  key_management.proto  node_service.pb.go  node_service.pb.gw.go  node_service.proto  validator_service.pb.go  validator_service.pb.gw.go  validator_service.proto
eth/v1/: BUILD.bazel  README.md  attestation.pb.go  attestation.proto  attestation.swagger.json  beacon_block.pb.go  beacon_block.proto  beacon_block.swagger.json  beacon_blocks.pb.go  beacon_blocks.proto  beacon_chain.pb.go  beacon_chain.proto  beacon_chain_service.pb.go  beacon_chain_service.pb.gw.go  beacon_chain_service.proto  beacon_chain_service.swagger.json  beacon_chain_service_grpc.pb.go  beacon_debug.pb.go  beacon_debug_service.pb.go  beacon_debug_service.pb.gw.go  beacon_debug_service.proto  beacon_debug_service.swagger.json  beacon_debug_service_grpc.pb.go  beacon_pool.pb.go  beacon_pool.proto  beacon_pools.pb.go  beacon_pools.proto  beacon_state.pb.go  beacon_state.proto  beacon_state.swagger.json  beacon_state_service.pb.go  beacon_state_service.proto  beacon_states.pb.go  beacon_states.proto  config.pb.go  config.proto  debug.pb.go  debug.proto  events.pb.go  events.proto  (+26 more)
eth/v1_gateway/: BUILD.bazel  README.md  attestation.pb.go  beacon_block.pb.go  beacon_chain_service.pb.go  beacon_debug_service.pb.go  beacon_debug_service_grpc.pb.go  beacon_state.pb.go  node.pb.go  node.pb.gw.go  options.pb.go  validator.pb.go  validator_service.pb.go  validator_service.pb.gw.go  validator_service_grpc.pb.go
eth/v1alpha1/: BUILD.bazel  attestation.pb.go  attestation.proto  attestation.swagger.json  beacon_block.pb.go  beacon_block.proto  beacon_block.swagger.json  beacon_block_altair.pb.go  beacon_block_altair.proto  beacon_block_altair.swagger.json  beacon_chain.pb.go  beacon_chain.pb.gw.go  beacon_chain.proto  beacon_chain.swagger.json  beacon_chain_grpc.pb.go  block.proto  eth1_application.pb.go  eth1_application.proto  eth1_execution.pb.go  eth1_execution.proto  generated.ssz.go  node.pb.go  node.pb.gw.go  node.proto  node.swagger.json  node_grpc.pb.go  options.pb.go  options.proto  shard.pb.go  state.proto  swagger.pb.go  swagger.proto  swagger_description.md  swagger_generated.pb.go  sync_committee.pb.go  sync_committee.proto  sync_committee.swagger.json  validator.pb.go  validator.pb.gw.go  validator.proto  (+2 more)
eth/v1alpha1/wrapper/: beacon_block.go
eth/v1alpha1_gateway/: BUILD.bazel  README.md  attestation.pb.go  beacon_block.pb.go  beacon_block_altair.pb.go  beacon_chain.pb.go  beacon_chain.pb.gw.go  eth1_application.pb.go  eth1_execution.pb.go  node.pb.go  node.pb.gw.go  options.pb.go  shard.pb.go  swagger_generated.pb.go  validator.pb.go  validator.pb.gw.go
eth/v2/: beacon_block.pb.go  beacon_block.proto  beacon_chain.pb.go  beacon_chain.proto  beacon_lightclient.pb.go  beacon_lightclient.proto  beacon_state.pb.go  beacon_state.proto  blobs.pb.go  blobs.proto  custom.go  generated.ssz.go  grpc.ssz.go  ssz.pb.go  ssz.proto  sync_committee.pb.go  sync_committee.proto  validator.pb.go  validator.proto  version.pb.go  version.proto  withdrawals.pb.go  withdrawals.proto
examples/integration/: .gitignore  BUILD.bazel  README.md  WORKSPACE
examples/integration/src/: BUILD.bazel  main.go
examples/javascript/: BUILD.bazel  WORKSPACE  app.e2e-spec.ts  app.ts  bazel-bin  bazel-javascript  bazel-out  bazel-testlogs  block_request.spec.ts  index.html  rollup.config.js  tsconfig.json
google/protobuf/: descriptor.proto
scripts/: build-py-package.py  common.sh  run-go-cast.sh  update-go-pbs.sh
tools/: def.bzl  ethereumapi_dependencies.bzl  proto_descriptor_sets.bzl  ssz.bzl
tools/replacer/: BUILD.bazel  main.go
