##############################################################################
# Common
##############################################################################

proto_library(
    name = "ethereum_eth_v1_proto",
    srcs = ["example.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@grpc_ecosystem_grpc_gateway//protoc-gen-swagger/options:options_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

##############################################################################
# Go
##############################################################################
# gazelle:ignore
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
    name = "ethereum_eth_v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/prysmaticlabs/ethereumapis/eth/v1",
    proto = ":ethereum_eth_v1_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@go_googleapis//google/api:annotations_go_proto",
        "@grpc_ecosystem_grpc_gateway//protoc-gen-swagger/options:options_go_proto",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":ethereum_eth_v1_go_proto"],
    importpath = "github.com/prysmaticlabs/ethereumapis/eth/v1",
    visibility = ["//visibility:public"],
)

##############################################################################
# OpenAPI (Swagger)
##############################################################################
load("@grpc_ecosystem_grpc_gateway//protoc-gen-swagger:defs.bzl", "protoc_gen_swagger")

protoc_gen_swagger(
    name = "swagger",
    proto = ":ethereum_eth_v1_proto",
    visibility = ["//visibility:public"],
)
