load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("//tools:ssz.bzl", "SSZ_DEPS", "ssz_gen_marshal")

ssz_gen_marshal(
    name = "ssz_generated_files",
    go_proto = ":v1_go_proto",
    objs = [
        "AggregateAttestationAndProof",
        "Attestation",
        "AttestationData",
        "AttesterSlashing",
        "BeaconBlock",
        "BeaconBlockHeader",
        "Checkpoint",
        "Deposit",
        "Eth1Data",
        "IndexedAttestation",
        "ProposerSlashing",
        "SignedAggregateAttestationAndProof",
        "SignedBeaconBlock",
        "SignedBeaconBlockHeader",
        "SignedVoluntaryExit",
        "Validator",
        "VoluntaryExit",
    ],
)

proto_library(
    name = "v1_proto",
    srcs = [
        "attestation.proto",
        "beacon_block.proto",
        "beacon_state.proto",
        "beacon_state_service.proto",
        "debug.proto",
        "validator.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:empty_proto",
        "@go_googleapis//google/api:annotations_proto",
        "@gogo_special_proto//github.com/gogo/protobuf/gogoproto",  # keep
    ],
)

go_proto_library(
    name = "v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/prysmaticlabs/ethereumapis/eth/v1",
    proto = ":v1_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gogo_protobuf//gogoproto:go_default_library",  # keep
        "@com_github_prysmaticlabs_go_bitfield//:go_default_library",  # keep
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

go_library(
    name = "go_default_library",
    srcs = [
        ":ssz_generated_files",  # keep
    ],
    embed = [":v1_go_proto"],
    importpath = "github.com/prysmaticlabs/ethereumapis/eth/v1",
    visibility = ["//visibility:public"],
    deps = SSZ_DEPS,  # keep
)
