load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "beacon_chain_service_grpc.pb.go",
        "beacon_debug_service_grpc.pb.go",
        "node_grpc.pb.go",
        "validator_service_grpc.pb.go",
    ],
    importpath = "github.com/prysmaticlabs/ethereumapis/eth/v1_gateway",
    visibility = ["//visibility:public"],
    deps = [
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
